--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.3",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.11.17"
   },
   "devDependencies": {
